--- a/grafana/Dockerfile.template
+++ b/grafana/Dockerfile.template
@@ -1,8 +1,10 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 WORKDIR /app
 ADD . /app/
-RUN install_packages wget adduser libfontconfig && \
-wget -q https://dl.grafana.com/oss/release/grafana_5.4.2_amd64.deb && \
-dpkg -i grafana_5.4.2_amd64.deb && \
-chown -R root:grafana /app/provisioning
+RUN install_packages apt-transport-https && \
+    echo "deb https://packages.grafana.com/oss/deb stable main" > /etc/apt/sources.list.d/grafana.list && \
+    curl https://packages.grafana.com/gpg.key | apt-key add - && \
+    apt-get update && \
+    install_packages wget adduser libfontconfig grafana && \
+    chown -R root:grafana /app/provisioning
 CMD [ "/app/entry.sh" ]
