--- a/grafana/Dockerfile.template
+++ b/grafana/Dockerfile.template
@@ -1,7 +1,7 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 WORKDIR /app
 ADD . /app/
-RUN install_packages apt-transport-https && \
+RUN install_packages apt-transport-https libcap2-bin jq && \
     echo "deb https://packages.grafana.com/oss/deb stable main" > /etc/apt/sources.list.d/grafana.list && \
     curl https://packages.grafana.com/gpg.key | apt-key add - && \
     apt-get update && \
