--- a/baletheus/Dockerfile.template
+++ b/baletheus/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-node:10.10
+FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-node:latest-bullseye
 RUN install_packages git && mkdir -p /app/data
 ADD . /app/
 WORKDIR /app
